# cpp_kokkos_example_project

./: CMakeLists.txt  README.md  set_project_env_vairables.sh
include/: config.hpp
scripts/: install_kokkos.sh
src/: CMakeLists.txt  function.hpp  main.cpp  struct.hpp
